--- a/diemthi/index.html
+++ b/diemthi/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Trường Đại Học Mở Thành Phố Hồ Chí Minh</title>
-    
+    <link rel="stylesheet" href="assets/style_more.css">
     <link rel="shortcut icon" href="assets/ico/logo_ou.ico" type="image/gif" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
@@ -12,22 +12,43 @@
     <link href="assets/css/bootstrap.css" rel="stylesheet"/>
     <!-- Customize styles -->
     <link href="assets/style.css" rel="stylesheet"/>
+
     <!-- font awesome styles -->
 	<link href="assets/font-awesome/css/font-awesome.css" rel="stylesheet">
 
 	<!-- Favicons -->
     <link rel="shortcut icon" href="assets/ico/ico.ico" >
   </head>
+  <style>
+   #menu a:hover {
+	background: #F1F1F1;
+	color: #0A5BC4;
+   }
+   #logo_ou {
+    position: relative;
+    top:0;
+    bottom: 2px;
+   }
+   .container a 
+   {
+    margin-bottom: 0;
+   }
+    .container img{
+        height: 3vh;
+        width: 3vw;
+    }
+  </style>
 <body>
 <!-- 
 	Upper Header Section 
 -->
 <div class="navbar navbar-inverse navbar-fixed-top">
-	<div class="topNav">
+	<div class="topNav" style="background-color: white;" >
 		<div class="container">
 			<div class="alignR">
 				 <div class="hcm" style="float:left">
-                 <a target="_blank" href="https://ou.edu.vn/" style="font-size:28px"><span><font color="FFFFFF">TRƯỜNG ĐẠI HỌC MỞ TP. HỒ CHÍ MINH</font></span></a>
+                <a href="#index"><img id="logo_ou" src="assets/ico/logo_ou.ico" alt=""></a>
+                 <a target="_blank" href="https://ou.edu.vn/" style="font-size:28px"><span><font color="#005a87">TRƯỜNG ĐẠI HỌC MỞ TP. HỒ CHÍ MINH</font></span></a>
                  </div>
                  <a href="index.html" style="font-size:14px">Trang Chủ</a>
 				<a href="./admin/dangnhap.php" style="font-size:14px"><span class="icon-user"></span> Đăng Nhập </a>
@@ -44,7 +65,7 @@ Lower Header Section
 <div class="container">
 <div id="gototop"> </div>
 <header id="header">
-<img src="assets/img/images/Ban.jpeg" alt="open university" height="144">
+<img src="assets/img/images/Ban.jpg" alt="open university" width="100%">
 </header>
 
 <!--
@@ -52,14 +73,14 @@ Navigation Bar Section
 -->
 	<div class="container">
 	  <div id="menu">
-			<ul class="nav">
+			<ul class="nav" style="background-color: #0A5BC4;">
 			  <li><a href="index.html"> &nbsp;TRANG CHỦ	</a></li>
-			  <li><a href="#">GIỚI THIỆU</a></li>
-			  <li><a href="#">TIN TỨC</a></li>
-                <li><a href="#">PHÒNG BAN</a></li>
+			  <li><a href="https://ou.edu.vn/gioi-thieu-chung/">GIỚI THIỆU</a></li>
+			  <li><a href="https://ou.edu.vn/tin-tuc/">TIN TỨC</a></li>
+                <li><a href="http://it.ou.edu.vn/">PHÒNG BAN</a></li>
 			  <li><a href="admin/loginhs.php">XEM ĐIỂM</a></li>
-			  <li><a href="#">KẾ HOẠCH</a></li>
-              <li><a href="#">LIÊN HỆ</a></li>
+			  <li><a href="https://ou.edu.vn/Lich-cong-tac-tuan/">KẾ HOẠCH</a></li>
+              <li><a href="https://ttqlhttt.ou.edu.vn/vi/lien-he">LIÊN HỆ</a></li>
 			</ul>
 	  </div>
 </div>
@@ -68,44 +89,44 @@ Navigation Bar Section
 	<div class="row">
 	<div class="span9">
 	<div class="well np">
-     <div class="thongbao" style="float:right">
+     <div class="thongbao" style="float:right;">
 
       <ul class="nav1">
       <div class="thongtin">THÔNG TIN</div>
-              <marquee behavior="scroll" direction="up" width="250px" scrollamount="4" onMouseOver="this.stop()" onMouseOut="this.start()"><span id="menu2_lbCreeping"><br><a target="_blank" href="#">Mục Tiêu Năm Học 2016-2017</a></br>"Xây dựng trường học tiên tiến, hiện đại, thực sự là một trung tâm văn hoá, giáo dục.Gắn giáo dục tri thức, đạo đức với giáo dục thể chất, giáo dục truyền thống văn hoá; rèn luyện con người về lý tưởng, phẩm chất, nhân cách, lối sống"</span><span id="menu2_lbCreeping">
-              <br><a target="_blank" href="#">Lịch Thi Học Kì I</a></br>Học sinh các lớp xem lịch thi Học Kì I năm 2016-2017 tại Website và tại bảng thông báo của Trường.</span>
-               <span><br><a target="_blank" href="#">Tổ Chức Cắm Trại Truyền Thống 9/1</a></br>Đoàn Trường THPT Trần Khai Nguyên tổ chức cắm trại truyền thống nhân ngày học sinh Việt Nam. Bí thư chi đoàn các lớp nhận thông báo tại Văn Phòng.</span>
+              <marquee behavior="scroll" direction="up" width="250px" scrollamount="4" onMouseOver="this.stop()" onMouseOut="this.start()"><span id="menu2_lbCreeping"><br><a target="_blank" href="#">Tiêu điểm sự kiện</a></br>"Lễ công bố hợp tác liên kết đào tạo đại học giữa Trường Đại học Mở Thành phố Hồ Chí Minh và Đại học South Wales, Vương quốc Anh"</span><span id="menu2_lbCreeping">
+              <br><a target="_blank" href="#">Thông báo học phí</a></br>Sinh viên các lớp xem học phí năm 2013-2014 tại trang tienichsv.</span>
+               <span><br><a target="_blank" href="#">Ngày hội tư vấn tuyển sinh – hướng nghiệp 2024</a></br>Ngày 03/3/2024, Trường Đại học Mở Thành phố Hồ Chí Minh tham gia Ngày hội tư vấn tuyển sinh – hướng nghiệp 2024 tại Trường Đại học Bách khoa – Đại học Quốc gia Thành phố Hồ Chí Minh, 268 Lý Thường Kiệt, Quận 10.</span>
               </marquee>
 			</ul>
       </div>
 		<div id="myCarousel" class="carousel slide homCar">
             <div class="carousel-inner">
 			  <div class="item">
-                <img style="width:100%" src="assets/img/4_resize.JPG" alt="bootstrap ecommerce templates">
+                <img style="width:100%; height: 400px;" src="assets/img/4_resize.jpeg" alt="bootstrap ecommerce templates">
                 <div class="carousel-caption">
-                      <h4>THPT Trần Khai Nguyên</h4>
-                      <p><span>Các Hoạt Động Ngoại Khóa</span></p>
+                      <h4>HCM Open University</h4>
+                      <p><span>Lễ công bố hợp tác liên kết đào tạo</span></p>
                 </div>
               </div>
 			  <div class="item">
-                <img style="width:100%" src="assets/img/14657456_1128321783952403_2154590869199717554_n.jpg" alt="bootstrap ecommerce templates">
+                <img style="width:100%;  height: 400px;" src="assets/img/14657456_1128321783952403_2154590869199717554_n.jpg" alt="bootstrap ecommerce templates">
                 <div class="carousel-caption">
-                      <h4>THPT Trần Khai Nguyên</h4>
-                      <p><span>Các Hoạt Động Ngoại Khóa</span></p>
+                      <h4>Thông báo học phí</h4>
+                      <p><span>Sinh viên kiểm tra trên tiện ích</span></p>
                 </div>
               </div>
 			  <div class="item active">
-                <img style="width:100%" src="assets/img/anh dai dien.JPG" alt="bootstrap ecommerce templates">
+                <img style="width:100% ; height: 400px;" src="assets/img/anh dai dien.JPG" alt="bootstrap ecommerce templates">
                 <div class="carousel-caption">
-                      <h4>THPT Trần Khai Nguyên</h4>
-                          <p><span>Các Hoạt Động Ngoại Khóa</span></p>
+                      <h4>Chương trình cử nhân trực tuyến</h4>
+                          <p><span>Khóa 01/2024</span></p>
                 </div>
               </div>
               <div class="item">
-                <img style="width:100%" src="assets/img/hs lop 10 TKN.jpg" alt="bootstrap templates">
+                <img style="width:100%; height: 400px;" src="assets/img/hs lop 10 TKN.jpg" alt="bootstrap templates">
                 <div class="carousel-caption">
-                      <h4>THPT Trần Khai Nguyên</h4>
-                      <p><span>Các Hoạt Động</span></p>
+                      <h4>Thạc sĩ Quản trị kinh doanh</h4>
+                      <p><span>Liên kết đại học Fresenius - Đức</span></p>
                 </div>
               </div>
             </div>
