xong index.html

--- a/diemthi/index.html
+++ b/diemthi/index.html
@@ -141,11 +141,11 @@ Navigation Bar Section
 
 	<div class="well well-small" style=" height: 350px">
         <div class="well well-small" style="font-weight: bold;background: #0A5BC4;color:#f1f1f1; margin-top: -20px;margin-left: -20px;margin-right: -20px">
-            <a href="#" style="text-decoration: none;color:#f1f1f1 ">TIN TỨC SỰ KIỆN</a></div>
+            <a href="https://ou.edu.vn/tin-tuc/" style="text-decoration: none;color:#f1f1f1 ">TIN TỨC SỰ KIỆN</a></div>
         <div class="well well-small" style=" float:left;width: 350px;height: 310px;margin-top: -20px;margin-left: -20px;margin-bottom: -20px">
             <img src="assets/img/1.jpg" style="width: 340px; height: 200px;">
             <br/>
-            <a href="#" style="text-decoration: none;color:#0A5BC4;font-weight: bold">Lễ tốt nghiệp chương trình Cử nhân Đào tạo</a>
+            <a href="https://ou.edu.vn/tin_tuc/le-tot-nghiep-cu-nhan-truc-tuyen-2024/" style="text-decoration: none;color:#0A5BC4;font-weight: bold">Lễ tốt nghiệp chương trình Cử nhân Đào tạo</a>
             <br>
             <p style="font-size: 11px; font-weight: bold;">Trong không khí vui mừng và phấn khởi, Tân cử nhân Nguyễn Vũ Kim Anh đã gửi lời tri ân chân thành đến lãnh đạo Nhà trường, các giảng viên, các thầy cô bộ phận giáo vụ, bộ phận kỹ thuật, gia đình và bạn bè đã luôn động viên, giúp đỡ trong suốt hành trình dài chinh phục tri thức tại chương trình cử nhân trực tuyến.</p>
             
@@ -153,62 +153,61 @@ Navigation Bar Section
         <div class="well well -small" style="width: 235px;float: right;height: 290px;margin-top: -20px;margin-right: -10px;margin-bottom: -20px">
             <div class="well well-small" style="height: 100px;margin-top: -20px;margin-right: -20px;margin-bottom: -20px;margin-left: -20px">
                 <img src="assets/img/2.jpg" style="width: 100px;height: 80px">
-                <a href="#" style="text-decoration: none;color:#0A5BC4;font-weight: bold">Họp Mặt Tân Niên</a>
+                <a href="https://ou.edu.vn/tin_tuc/truong-dai-hoc-mo-thanh-pho-ho-chi-minh-hop-mat-tan-nien-xuan-giap-thin-nam-2024/" style="text-decoration: none;color:#0A5BC4;font-weight: bold">Họp Mặt Tân Niên</a>
             </div>
             <div class="well well-small" style="height: 100px;margin-top: -20px;margin-right: -20px;margin-bottom: -20px;margin-left: -20px">
                 <img src="assets/img/3.jpg" style="width: 100px;height: 80px">
-                <a href="#" style="text-decoration: none;color:#0A5BC4;font-weight: bold">Tạp chí Khoa học</a>
+                <a href="https://ou.edu.vn/tin_tuc/06-tap-chi-chuyen-nganh-cua-tap-chi-khoa-hoc-dai-hoc-mo-thanh-pho-ho-chi-minh-tham-gia-he-thong-du-lieu-quoc-te-repec/" style="text-decoration: none;color:#0A5BC4;font-weight: bold">Tạp chí Khoa học</a>
 
             </div>
             <div class="well well-small" style="height: 100px;margin-top: -20px;margin-right: -20px;margin-bottom: -20px;margin-left: -20px">
                 <img src="assets/img/4.jpg" style="width: 100px;height: 80px">
-                <a href="#" style="text-decoration: none;color:#0A5BC4;font-weight: bold">Giải bóng đá</a>
+                <a href="https://ou.edu.vn/tin_tuc/giai-bong-da-cuu-sinh-vien-truong-dai-hoc-mo-thanh-pho-ho-chi-minh-mung-xuan-giap-thin-2024/" style="text-decoration: none;color:#0A5BC4;font-weight: bold">Giải bóng đá</a>
             </div>
         </div>
 	</div>
     <!-- done here -->
         <div class="well well-small" style=" height: 350px">
             <div class="well well-small" style="font-weight: bold;background: #0A5BC4;color:#f1f1f1; margin-top: -20px;margin-left: -20px;margin-right: -20px">
-                <a href="#" style="text-decoration: none;color:#f1f1f1 ">HOẠT ĐỘNG CHUYÊN MÔN</a></div>
+                <a href="https://ou.edu.vn/sumang-tamnhin/" style="text-decoration: none;color:#f1f1f1 ">CÁC HỆ ĐÀO TẠO</a></div>
             <div class="well well-small" style=" float:left;width: 350px;height: 310px;margin-top: -20px;margin-left: -20px;margin-bottom: -20px">
-                <img src="assets/img/5.jpg" style="width: 340px; height:200px;">
+                <img src="assets/img/5.webp" style="width: 340px; height:200px;">
                 <br/>
-                <a href="#" style="text-decoration: none;color:#0A5BC4;font-weight: bold">Hóa học vui - Chương trình ngoại khóa tổ hóa học</a>
-                “Học tập đâu chỉ là những bài lý thuyết khô khan, mà phải áp dụng được vào cuộc sống,
-                đồng thời cũng phải biết vận dụng tri thức của mình để thể hiện trách nhiệm với cộng đồng, xã hội”.
+                <a href="https://ou.edu.vn/sumang-tamnhin/" style="text-decoration: none;color:#0A5BC4;font-weight: bold">Sứ Mạng - Tầm Nhìn <br></a>
+                “Trường Đại học Mở TP.HCM thực hiện giáo dục mở, tạo bình đẳng cho mọi người trong tiếp cận giáo dục đại học, góp phần xây dựng xã hội học tập, nâng cao tri thức và năng lực nghề nghiệp cho người học bằng các phương thức linh hoạt, thuật tiện và hiệu quả”.
             </div>
             <div class="well well -small" style="width: 235px;float: right;height: 290px;margin-top: -20px;margin-right: -10px;margin-bottom: -20px">
                 <div class="well well-small" style="height: 100px;margin-top: -20px;margin-right: -20px;margin-bottom: -20px;margin-left: -20px">
-                    <img src="assets/img/6.jpg" style="width: 100px;height: 80px">
-                    <a href="#" style="text-decoration: none;color:#0A5BC4;font-weight: bold">Kể chuyện về Bác</a>
+                    <img src="assets/img/dtsdh.png" style="width: 100px;height: 80px">
+                    <a href="https://sdh.ou.edu.vn/" style="text-decoration: none;color:#0A5BC4;font-weight: bold">Đào tạo sau Đại học</a>
                 </div>
                 <div class="well well-small" style="height: 100px;margin-top: -20px;margin-right: -20px;margin-bottom: -20px;margin-left: -20px">
-                    <img src="assets/img/7.jpg" style="width: 100px;height: 80px">
-                    <a href="#" style="text-decoration: none;color:#0A5BC4;font-weight: bold">"Học khôn ngoan"</a>
+                    <img src="assets/img/7.png" style="width: 100px;height: 80px">
+                    <a href="https://sdh.ou.edu.vn/" style="text-decoration: none;color:#0A5BC4;font-weight: bold">Đào tạo Chính Quy</a>
 
                 </div>
                 <div class="well well-small" style="height: 100px;margin-top: -20px;margin-right: -20px;margin-bottom: -20px;margin-left: -20px">
                     <img src="assets/img/8.jpg" style="width: 100px;height: 80px">
-                    <a href="#" style="text-decoration: none;color:#0A5BC4;font-weight: bold">Ứng dụng Toán học</a>
+                    <a href="https://tuyensinh.elo.edu.vn/" style="text-decoration: none;color:#0A5BC4;font-weight: bold">Đào tạo Từ Xa</a>
                 </div>
             </div>
         </div>
         <div class="well well-small" style=" height: 350px">
             <div class="well well-small" style="font-weight: bold;background: #C00;color:#f1f1f1; margin-top: -20px;margin-left: -20px;margin-right: -20px">
-                <a href="#" style="text-decoration: none;color:#f1f1f1 ">TƯ VẤN HỌC ĐƯỜNG</a></div>
+                <a href="https://tuyensinh.ou.edu.vn/" style="text-decoration: none;color:#f1f1f1 ">TƯ VẤN HỌC ĐƯỜNG</a></div>
             <div class="well well-small" style=" float:left;width: 350px;height: 310px;margin-top: -20px;margin-left: -20px;margin-bottom: -20px">
                 <img src="assets/img/9.png" style="width: 340px; height:200px;">
                 <br/>
-                <a href="#" style="text-decoration: none;color:#0A5BC4;font-weight: bold">Cổng thông tin tuyển sinh năm 2024</a>
+                <a href="https://tuyensinh.ou.edu.vn/" style="text-decoration: none;color:#0A5BC4;font-weight: bold">Cổng thông tin tuyển sinh năm 2024</a>
             </div>
             <div class="well well -small" style="width: 235px;float: right;height: 290px;margin-top: -20px;margin-right: -10px;margin-bottom: -20px">
                 <div class="well well-small" style="height: 100px;margin-top: -20px;margin-right: -20px;margin-bottom: -20px;margin-left: -20px">
                     <img src="assets/img/10.jpg" style="width: 100px;height: 80px">
-                    <a href="#" style="text-decoration: none;color:#0A5BC4;font-weight: bold">Chương trình liên kết</a>
+                    <a href="http://v1.ou.edu.vn/dacbiet/Pages/Tuyen-sinh.aspx" style="text-decoration: none;color:#0A5BC4;font-weight: bold">Chương trình liên kết</a>
                 </div>
                 <div class="well well-small" style="height: 100px;margin-top: -20px;margin-right: -20px;margin-bottom: -20px;margin-left: -20px">
                     <img src="assets/img/11.jpeg" style="width: 100px;height: 80px">
-                    <a href="#" style="text-decoration: none;color:#0A5BC4;font-weight: bold">Ước mơ nghề nghiệp</a>
+                    <a href="https://ou.edu.vn/tin_tuc/ngay-hoi-viec-lam-ban-thoi-gian-lan-thu-6-nam-2023-voi-hon-1-200-vi-tri-co-hoi-viec-lam/" style="text-decoration: none;color:#0A5BC4;font-weight: bold">Ước mơ nghề nghiệp</a>
 
                 </div>
                 <div class="well well-small" style="height: 100px;margin-top: -20px;margin-right: -20px;margin-bottom: -20px;margin-left: -20px">
@@ -224,27 +223,27 @@ Navigation Bar Section
 
         <div class="well well-small"  style="margin-top: -20px;margin-left: -10px;margin-right: -10px;margin-bottom:63px">
             <div class="well well-small"  style="margin-top: -20px;margin-left: -10px;margin-right: -10px">
-                <img src="assets/img/6.jpg" style="width: 100px">
+                <img src="assets/img/6.jpg" style="width: 100px; height: 90px;">
                 <a href="#" style="text-decoration: none;color:#0A5BC4;font-weight: bold">Tuần 4 Tháng 11</a></div>
             <div class="well well-small"  style="margin-top: -20px;margin-left: -10px;margin-right: -10px">
-                <img src="assets/img/2.jpg" style="width: 100px">
+                <img src="assets/img/2.jpg" style="width: 100px; height:90px">
                 <a href="#" style="text-decoration: none;color:#0A5BC4;font-weight: bold">Tuần 1 Tháng 12</a></div>
             <div class="well well-small"  style="margin-top: -20px;margin-left: -10px;margin-right: -10px">
-                <img src="assets/img/3.jpg" style="width: 100px">
+                <img src="assets/img/3.jpg" style="width: 100px; height:90px">
                 <a href="#" style="text-decoration: none;color:#0A5BC4;font-weight: bold">Tuần 2 Tháng 12</a></div>
         </div>
         <div class="well well-small" style="font-weight: bold;background: #C00;color:#f1f1f1; margin-top: -10px;margin-left: -10px;margin-right: -10px">
             <center><a href="#" style="text-decoration: none;color:#f1f1f1">LỊCH CÔNG TÁC</a></div></center>
         <div class="well well-small">
             <div class="well well-small"  style="margin-top: -20px;margin-left: -10px;margin-right: -10px;margin-bottom:-13px">
-                <img src="assets/img/13.jpg" style="width: 100px">
-                <a href="#" style="text-decoration: none;color:#0A5BC4;font-weight: bold">Tuần 4 Tháng 11</a></div>
+                <img src="assets/img/13.jpg" style="width: 100px;height: 50px;">
+                <a href="https://ou.edu.vn/Lich-cong-tac-tuan/" style="text-decoration: none;color:#0A5BC4;font-weight: bold">Tuần 1 Tháng 3</a></div>
             <div class="well well-small"  style="margin-top: -20px;margin-left: -10px;margin-right: -10px">
-                <img src="assets/img/13.jpg" style="width: 100px">
-                <a href="#" style="text-decoration: none;color:#0A5BC4;font-weight: bold">Tuần 1 Tháng 12</a></div>
+                <img src="assets/img/13.jpg" style="width: 100px;height: 50px;">
+                <a href="https://ou.edu.vn/Lich-cong-tac-tuan/" style="text-decoration: none;color:#0A5BC4;font-weight: bold">Tuần 2 Tháng 4</a></div>
             <div class="well well-small"  style="margin-top: -20px;margin-left: -10px;margin-right: -10px">
-                <img src="assets/img/13.jpg" style="width: 100px">
-                <a href="#" style="text-decoration: none;color:#0A5BC4;font-weight: bold">Tuần 2 Tháng 12</a></div>
+                <img src="assets/img/13.jpg" style="width: 100px;height: 50px;">
+                <a href="https://ou.edu.vn/Lich-cong-tac-tuan/" style="text-decoration: none;color:#0A5BC4;font-weight: bold">Tuần 3 Tháng 5</a></div>
 
         </div>
         <div class="well well-small" style="font-weight: bold;background: #C00;color:#f1f1f1; margin-top: -10px;margin-left: -10px;margin-right: -10px">
