--- a/diemthi/index.html
+++ b/diemthi/index.html
@@ -278,7 +278,7 @@ Footer
 <div class="copyright">
 <div class="container">
   <div class="LogoBotoom" style='margin: 15px 20px 0; float:left'><img src="assets/img/Lo.ico" alt=" " /> </div>
-  <div class="containe" style="float:none">
+  <div class="containe" style="float:none; text-align: center;">
   <br>
   <p><span><b>Địa chỉ: 35 – 37 Hồ Hảo Hớn, Phường Cô Giang, Quận 1, TP. HCM.</b></span></p>
   <p><span><b>Điện thoại: 028-38364748.</b><br>
