--- a/diemthi/index.html
+++ b/diemthi/index.html
@@ -153,16 +153,16 @@ Navigation Bar Section
         </div>
         <div class="well well -small" style="width: 235px;float: right;height: 290px;margin-top: -20px;margin-right: -10px;margin-bottom: -20px">
             <div class="well well-small" style="height: 100px;margin-top: -20px;margin-right: -20px;margin-bottom: -20px;margin-left: -20px">
-                <img src="assets/img/2.jpg" style="width: 100px;height: 80px">
+                <img src="assets/img/anh_2.jpg" style="width: 100px;height: 80px">
                 <a href="https://ou.edu.vn/tin_tuc/truong-dai-hoc-mo-thanh-pho-ho-chi-minh-hop-mat-tan-nien-xuan-giap-thin-nam-2024/" style="text-decoration: none;color:#0A5BC4;font-weight: bold">Họp Mặt Tân Niên</a>
             </div>
             <div class="well well-small" style="height: 100px;margin-top: -20px;margin-right: -20px;margin-bottom: -20px;margin-left: -20px">
-                <img src="assets/img/3.jpg" style="width: 100px;height: 80px">
+                <img src="assets/img/anh_3.jpg" style="width: 100px;height: 80px">
                 <a href="https://ou.edu.vn/tin_tuc/06-tap-chi-chuyen-nganh-cua-tap-chi-khoa-hoc-dai-hoc-mo-thanh-pho-ho-chi-minh-tham-gia-he-thong-du-lieu-quoc-te-repec/" style="text-decoration: none;color:#0A5BC4;font-weight: bold">Tạp chí Khoa học</a>
 
             </div>
             <div class="well well-small" style="height: 100px;margin-top: -20px;margin-right: -20px;margin-bottom: -20px;margin-left: -20px">
-                <img src="assets/img/4.jpg" style="width: 100px;height: 80px">
+                <img src="assets/img/anh_4.jpg" style="width: 100px;height: 80px">
                 <a href="https://ou.edu.vn/tin_tuc/giai-bong-da-cuu-sinh-vien-truong-dai-hoc-mo-thanh-pho-ho-chi-minh-mung-xuan-giap-thin-2024/" style="text-decoration: none;color:#0A5BC4;font-weight: bold">Giải bóng đá</a>
             </div>
         </div>
@@ -188,7 +188,7 @@ Navigation Bar Section
 
                 </div>
                 <div class="well well-small" style="height: 100px;margin-top: -20px;margin-right: -20px;margin-bottom: -20px;margin-left: -20px">
-                    <img src="assets/img/8.jpg" style="width: 100px;height: 80px">
+                    <img src="assets/img/anh_8.jpg" style="width: 100px;height: 80px">
                     <a href="https://tuyensinh.elo.edu.vn/" style="text-decoration: none;color:#0A5BC4;font-weight: bold">Đào tạo Từ Xa</a>
                 </div>
             </div>
@@ -197,17 +197,17 @@ Navigation Bar Section
             <div class="well well-small" style="font-weight: bold;background: #0A5BC4;color:#f1f1f1; margin-top: -20px;margin-left: -20px;margin-right: -20px">
                 <a href="#" style="text-decoration: none;color:#f1f1f1 ">TƯ VẤN HỌC ĐƯỜNG</a></div>
             <div class="well well-small" style=" float:left;width: 350px;height: 310px;margin-top: -20px;margin-left: -20px;margin-bottom: -20px">
-                <img src="assets/img/9.png" style="width: 340px; height:200px;">
+                <img src="assets/img/anh_9.png" style="width: 340px; height:200px;">
                 <br/>
                 <a href="https://tuyensinh.ou.edu.vn/" style="text-decoration: none;color:#0A5BC4;font-weight: bold">Cổng thông tin tuyển sinh năm 2024</a>
             </div>
             <div class="well well -small" style="width: 235px;float: right;height: 290px;margin-top: -20px;margin-right: -10px;margin-bottom: -20px">
                 <div class="well well-small" style="height: 100px;margin-top: -20px;margin-right: -20px;margin-bottom: -20px;margin-left: -20px">
-                    <img src="assets/img/10.jpg" style="width: 100px;height: 80px">
+                    <img src="assets/img/anh_10.jpg" style="width: 100px;height: 80px">
                     <a href="http://v1.ou.edu.vn/dacbiet/Pages/Tuyen-sinh.aspx" style="text-decoration: none;color:#0A5BC4;font-weight: bold">Chương trình liên kết</a>
                 </div>
                 <div class="well well-small" style="height: 100px;margin-top: -20px;margin-right: -20px;margin-bottom: -20px;margin-left: -20px">
-                    <img src="assets/img/11.jpeg" style="width: 100px;height: 80px">
+                    <img src="assets/img/anh_11.jpeg" style="width: 100px;height: 80px">
                     <a href="https://ou.edu.vn/tin_tuc/ngay-hoi-viec-lam-ban-thoi-gian-lan-thu-6-nam-2023-voi-hon-1-200-vi-tri-co-hoi-viec-lam/" style="text-decoration: none;color:#0A5BC4;font-weight: bold">Ước mơ nghề nghiệp</a>
 
                 </div>
@@ -224,13 +224,13 @@ Navigation Bar Section
 
         <div class="well well-small"  style="margin-top: -20px;margin-left: -10px;margin-right: -10px;margin-bottom:63px">
             <div class="well well-small"  style="margin-top: -20px;margin-left: -10px;margin-right: -10px">
-                <img src="assets/img/6.jpg" style="width: 100px; height: 90px;">
+                <img src="assets/img/anh_6.jpg" style="width: 100px; height: 90px;">
                 <a href="#" style="text-decoration: none;color:#0A5BC4;font-weight: bold">Tuần 4 Tháng 11</a></div>
             <div class="well well-small"  style="margin-top: -20px;margin-left: -10px;margin-right: -10px">
-                <img src="assets/img/2.jpg" style="width: 100px; height:90px">
+                <img src="assets/img/anh_2.jpg" style="width: 100px; height:90px">
                 <a href="#" style="text-decoration: none;color:#0A5BC4;font-weight: bold">Tuần 1 Tháng 12</a></div>
             <div class="well well-small"  style="margin-top: -20px;margin-left: -10px;margin-right: -10px">
-                <img src="assets/img/3.jpg" style="width: 100px; height:90px">
+                <img src="assets/img/anh_3.jpg" style="width: 100px; height:90px">
                 <a href="#" style="text-decoration: none;color:#0A5BC4;font-weight: bold">Tuần 2 Tháng 12</a></div>
         </div>
         <div class="well well-small" style="font-weight: bold;background: #0A5BC4;color:#f1f1f1; margin-top: -10px;margin-left: -10px;margin-right: -10px">
